[package]
name = "llmweb"
version = "0.1.4"
edition = "2024"
description = "Powering the Web with Rust & LLMs"
license = "MIT"
repository = "https://github.com/zTgx/llmweb"
readme = "README.md"
keywords = ["llm", "web"]

[[bin]]
name = "llmweb-cli"
path = "src/main.rs"

[dependencies]
genai = "0.3.5"
headless_chrome = "1.0.17"
tokio = { version = "1.46.1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.0"
thiserror = "2"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
chrono = "0.4.41"